--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div id="profile">
-        <img src="images/IMG_20220823_200744_204.jpg" alt="" />
+        <img src="IMG_20220823_200744_204.jpg" alt="" />
       </div>
       <div id="profileinfo">
         <h1 id="name">Manish Bulchandani</h1>
